# lumi-lang

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: test.yml
.lumi/: id_ed25519_test_key  id_ed25519_test_key.pub
benches/: arithmetic_benchmarks.rs  memory_benchmarks.rs
docs/: instructions.md  lumi-lang.md
docs/grammar/: asm.g4
docs/rfc/language/: rfc-01.md
lumi_asm/: Cargo.toml
lumi_asm/grammar/: lumi_asm_v2.pest
lumi_asm/src/: assembler.rs  assembler_errors.rs  file_assembler.rs  file_disassembler.rs  header_utils.rs  instruction.rs  instruction_v2.rs  lib.rs  symbols.rs
lumi_asm/src/core_parsers/: comment_parser.rs  directive_parser.rs  label_parser.rs  mod.rs  opcode_parser.rs  operand_parser.rs  register_parser.rs  separator_parser.rs
lumi_asm/src/parser_combinators/: instruction_parser.rs  mod.rs  program_parser.rs
lumi_asm/src/parsers/: assembler_instruction.rs  lumi_asm_parser.rs  mod.rs  program_parser.rs
lumi_asm/test/: factorial.lumi  test  test.lumi  test_invalid.lumi
lumi_asm/test/asm/: basic.lumi
lumi_ext_metrics/: Cargo.toml
lumi_ext_metrics/src/: lib.rs
lumi_lang/: Cargo.toml
lumi_lang/src/parser/: arithmetic.rs  mod.rs  operand.rs  tokens.rs
lumi_vm_2/: Cargo.toml
lumi_vm_2/benches/: lumi_bench.rs
lumi_vm_2/src/: lib.rs
lumi_vm_2/src/cli/: mod.rs
lumi_vm_2/src/utils/: logging.rs
lumi_vm_2/src/vm/: extensions.rs  mod.rs  program.rs  virtual_machine.rs
lumi_vm_2/src/vm/operations/: arithmetic.rs  bitwise.rs  comparison.rs  control.rs  logical.rs  memory.rs  mod.rs  system.rs
lumi_vm_sdk/: Cargo.toml
lumi_vm_sdk/src/: lib.rs
lumi_vm_v1_archive/: Cargo.toml
lumi_vm_v1_archive/benches/: arithmetic_benchmarks.rs  lumi_bench.rs
lumi_vm_v1_archive/src/: lib.rs
lumi_vm_v1_archive/src/assembler/: directive_parsers.rs  instruction_parsers.rs  mod.rs  opcode_parsers.rs  operand_parsers.rs  program_parsers.rs  register_parsers.rs
lumi_vm_v1_archive/src/repl/: repl_commands.rs
lumi_vm_v1_archive/src/util/: custom_logger.rs  disassembler.rs  mod.rs
lumi_vm_v1_archive/src/vm/: arithmetic.rs  bitwise.rs  comparison.rs  control.rs  logical.rs  system.rs
programs/: test.lumi  test2.lumi  test3.lumi
src/: instruction.rs  lib.rs  main.rs  ssh.rs  vm.rs_old
src/assembler/: assembler_errors.rs  comment_parsers.rs  directive_parsers.rs  instruction_parsers.rs  label_parsers.rs  mod.rs  opcode_parsers.rs  operand_parsers.rs  program_parsers.rs  register_parsers.rs  separator_parsers.rs  symbols.rs
src/cli/: mod.rs
src/repl/: mod.rs  repl_commands.rs
src/scheduler/: mod.rs
src/util/: disassembler.rs  header_utils.rs  logging.rs  mod.rs
src/vm/: arithmetic.rs  comparison.rs  control.rs  logical.rs  memory.rs  mod.rs  system.rs
