[package]
name = "lumi"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-supreme = "0.8.0"
colored = "2.1.0"
clap = { version = "4.4.11", features = ["color", "derive", "unicode"] }
clap_derive = "4.4.7"
log = "0.4.20"
fern = "0.6.2"
env_logger = "0.10.1"
byteorder = "1.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.31"
serde = "1.0.193"
serde_derive = "1.0.193"
lazy_static = "1.4.0"
dirs = "5.0.1"
num_cpus = "1.16.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "lumi"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "lumi_bench"
harness = false
