[package]
name = "lumi_asm"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
colored = "2.1.0"
log = "0.4.20"
env_logger = "0.10.1"
byteorder = "1.5.0"
lazy_static = "1.4.0"
anyhow = { version = "1.0.79", features = [] }
tempfile = "3.15.0"

[[bin]]
name = "lumi_asm"

[dev-dependencies]
criterion = "0.5.1"

#[[bench]]
#name = "lumi_bench"
#harness = false
