[package]
name = "lumi_ext_metrics"
version = "2.0.0"
edition = "2021"
description = "Lumi VM extension for collecting metrics."
authors = ["Martin Bucinskas <martin@martinb.dev>"]
readme = "README.md"
keywords = ["lumi", "lvm", "extension", "metrics", "plugin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lumi_ext_metrics"
crate-type = ["rlib", "dylib"]

[features]
default = []

[dependencies]
lumi_vm_sdk = { path = "../lumi_vm_sdk" }
log = "0.4.20"
