[package]
name = "lumi2"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lumi_asm = { path = "../lumi_asm" }
lumi_vm_sdk = { path = "../lumi_vm_sdk" }
libloading = "0.8.6"
nom = "7.1.3"
nom-supreme = "0.8.0"
colored = "2.1.0"
clap = { version = "4.4.11", features = ["color", "derive", "unicode"] }
clap_derive = "4.4.7"
log = "0.4.20"
fern = "0.6.2"
env_logger = "0.10.1"
byteorder = "1.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.31"
serde = "1.0.193"
serde_derive = "1.0.193"
lazy_static = "1.4.0"
dirs = "5.0.1"
num_cpus = "1.16.0"
russh = { version = "0.43.0" }
russh-keys = { version = "0.43.0" }
futures = "0.3.30"
tokio = "1.35.1"
async-trait = { version = "0.1.76", features = [] }
anyhow = { version = "1.0.79", features = [] }
base64ct = "1.6.0"
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
#ed25519-dalek = { version = "2.1.1", features = ["pem"] }

[[bin]]
name = "lumi2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "lumi_bench"
harness = false
